--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
           class="text-md"
           >https://github.com/nulla2011/Bluearchive-logo</a
         >
+        <h2
+          class="i18n text-2xl font-bold leading-loose"
+          data-i18n="Remake : Suna"
+        >
+          Remake : Suna
+        </h2>
       </section>
     </footer>
     <script type="module" src="/src/main.ts"></script>
